--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,13 @@
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
-
-[project]``
-name = "example_package_YOUR_USERNAME_HERE"
-version = "0.0.1"
+[project]
+name = "pyStruct"
+version = "5.0.1"
 authors = [
-  { name="Example Author", email="author@example.com" },
+  { name="Sam" }
 ]
-description = "A small example package"
+description = "A small FEM calculation package"
 readme = "README.md"
 requires-python = ">=3.8"
 classifiers = [``
@@ -18,5 +17,5 @@ classifiers = [``
 ]
 
 [project.urls]
-Homepage = "https://github.com/pypa/sampleproject"
-Issues = "https://github.com/pypa/sampleproject/issues"
+Homepage = "https://github.com/sudo-sam-sam/pyStruct"
+Issues = "https://github.com/sudo-sam-sam/pyStruct/issues"
